--- a/static/style.css
+++ b/static/style.css
@@ -3,31 +3,27 @@
  * Copyright (c) 2012-2013, Christopher Jeffrey (MIT License)
  */
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-div {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
-html {
-  background: #fff;
-}
-
-html.dark {
-  background: #333;
-}
-
-html.maximized {
-  overflow: hidden;
-}
-
+html,
 body {
-  margin: 25px;
+    margin: 0;
+    padding: 0;
+}
+div {
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+html {
+    background: #fff;
+}
+html.dark {
+    background: #333;
+}
+html.maximized {
+    overflow: hidden;
+}
+body {
+    margin: 25px;
 }
 
 /* Only allow plaintext?
@@ -37,90 +33,87 @@ body {
 }
 */
 
+
 /**
  * Terminal
  */
 
 .window {
-  padding-top: 15px;
-  border: #fafafa solid 1px;
-  background: #272829;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 1000;
-  box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
+    padding-top: 30px;
+    border: #fafafa solid 1px;
+    background: #272829;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
 }
-
 .maximized .window {
-  border: none;
-  box-shadow: none;
+    border: none;
+    box-shadow: none;
 }
-
 .dark .window {
-  box-shadow: none;
+    box-shadow: none;
 }
-
 .bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 13px;
-  padding: 1px 0;
-  font-family: "DejaVu Sans Mono", "Liberation Mono", monospace;
-  color: #fafafa;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    padding: 1px 0;
+    font-family: "DejaVu Sans Mono", "Liberation Mono", monospace;
+    color: #fafafa;
 }
-
 .dark .bar,
-.maximized .bar {
-}
-
+.maximized .bar {}
 .title {
-  position: absolute;
-  right: 5px;
-  top: 2px;
-  font-size: 11px;
-  cursor: default;
+    position: absolute;
+    right: 5px;
+    top: 0px;    
+    cursor: default;
+    font-size: 18px;
+    border-left: 1px solid white;
+    line-height: 30px;
+    padding-left: 5px;
 }
-
 .tab {
-  font-size: 16px;
-  margin-left: 8px;
-  margin-top: -2px;
-  float: left;
-  cursor: pointer;
+    font-size: 18px;
+    margin-left: 8px;
+    margin-top: -2px;
+    float: left;
+    cursor: pointer;
+    line-height: 30px;
+    opacity: 0.7;
 }
-
+.tab.active {
+    font-weight: bold;
+    opacity: 1;
+}
 .tab:hover {
-  font-weight: bold;
+    font-weight: bold;
 }
-
 .grip {
-  position: absolute;
-  bottom: -10px;
-  right: -10px;
-  width: 22px;
-  height: 22px;
-  cursor: se-resize;
-  z-index: -1;
-  background: transparent;
+    position: absolute;
+    bottom: -10px;
+    right: -10px;
+    width: 22px;
+    height: 22px;
+    cursor: se-resize;
+    z-index: -1;
+    background: transparent;
 }
-
-.grip:hover {
-}
-
+.grip:hover {}
 .terminal {
-  border: #000 solid 5px;
-  font-family: "DejaVu Sans Mono", "Liberation Mono", monospace;
-  font-size: 11px;
-  color: #f0f0f0;
-  background: #000;
+    border: #000 solid 5px;
+    font-family: "DejaVu Sans Mono", "Liberation Mono", monospace;
+    font-size: 11px;
+    color: #f0f0f0;
+    background: #000;
 }
-
 .reverse-video {
-  color: #000;
-  background: #f0f0f0;
+    color: #000;
+    background: #f0f0f0;
 }
 
 /**
@@ -128,56 +121,55 @@ body {
  */
 
 h1 {
-  font: 20px/1.5 sans-serif;
-  background: #333;
-  margin: -25px -25px 0 -25px;
-  height: 30px;
-  padding: 10px 25px;
-  color: white;
-  border-top: #e15729 solid 10px;
+    font: 20px/1.5 sans-serif;
+    background: #333;
+    margin: -25px -25px 0 -25px;
+    height: 30px;
+    padding: 10px 25px;
+    color: white;
+    border-top: #e15729 solid 10px;
 }
-
-#open, #lights {
-  font: 20px/1.5 sans-serif;
-  position: fixed;
-  right: 0;
-  padding: 10px;
-  height: 50px;
-  color: white;
-  cursor: pointer;
-  margin: 0;
-  background: none;
-  border: none;
-  -webkit-appearance: none;
-}
-
-#open {
-  top: 10px;
-  background: #333;
-}
-
+#open,
 #lights {
-  font-size: 18px;
-  height: 46px;
-  top: 60px;
-  background: #555;
+    font: 20px/1.5 sans-serif;
+    position: fixed;
+    right: 0;
+    padding: 10px;
+    height: 50px;
+    color: white;
+    cursor: pointer;
+    margin: 0;
+    background: none;
+    border: none;
+    -webkit-appearance: none;
 }
-
-#open:hover, #lights:hover {
-  color: slategrey;
-  background: white;
+#open {
+    top: 10px;
+    background: #333;
 }
-
-#open:active, #lights:active {
-  color: orange;
+#lights {
+    font-size: 18px;
+    height: 46px;
+    top: 60px;
+    background: #555;
 }
-
+#open:hover,
+#lights:hover {
+    color: slategrey;
+    background: white;
+}
+#open:active,
+#lights:active {
+    color: orange;
+}
 #help {
-  font: 12px/1.5 sans-serif;
-  color: #999;
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
+    font: 12px/1.5 sans-serif;
+    color: #999;
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
 }
-
-.dark h1, .dark #help { display: none; }
+.dark h1,
+.dark #help {
+    display: none;
+}
