--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,11 +43,14 @@ body {
     border: #fafafa solid 1px;
     background: #272829;
     position: absolute;
-    top: 20px;
-    left: 20px;
+    bottom: 0px;
+    right:40px;
+    top:100px;
+    width: 50%;
     z-index: 1000;
     box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
 }
+
 .maximized .window {
     border: none;
     box-shadow: none;
@@ -130,6 +133,7 @@ h1 {
     color: white;
     border-top: #e15729 solid 10px;
 }
+/*
 #open,
 #lights {
     font: 20px/1.5 sans-serif;
@@ -144,21 +148,23 @@ h1 {
     border: none;
     -webkit-appearance: none;
 }
+*/
+/*
 #open {
     top: 10px;
     background: #333;
 }
+*/
 #lights {
-    font-size: 18px;
-    height: 46px;
-    top: 60px;
-    background: #555;
+    top: 10px;
+    right: 100px;
+    background: #333;
 }
-#open:hover,
+/*#open:hover,
 #lights:hover {
     color: slategrey;
     background: white;
-}
+}*/
 #open:active,
 #lights:active {
     color: orange;
@@ -169,6 +175,16 @@ h1 {
     position: fixed;
     bottom: 10px;
     left: 10px;
+}
+/**
+*Docker list
+*/
+#docker {
+    font: 12px/1.5 sans-serif;
+    color: #999;
+    position: fixed;
+    top: 60px;
+    right: 20px;
 }
 .dark h1,
 .dark #help {
